--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "roboto";
+    src: url(../fonts/Roboto/static/Roboto-Regular.ttf);
+}
